--- a/vsts/dps-e2e.yaml
+++ b/vsts/dps-e2e.yaml
@@ -54,27 +54,28 @@ jobs:
 
       PROVISIONING_ROOT_CERT: $(PYTHON-SCRIPT-PROVISIONING-ROOT-CERT)
       PROVISIONING_ROOT_CERT_KEY: $(PYTHON-SCRIPT-PROVISIONING-ROOT-KEY)
-      PROVISIONING_INTERMEDIATE_CERT: $(PYTHON-SCRIPT-PROVISIONING-INTERMEDIATE-CERT)
-      PROVISIONING_INTERMEDIATE_CERT_KEY: $(PYTHON-SCRIPT-PROVISIONING-INTERMEDIATE-KEY)
-
-      PROVISIONING_DEVICE_CERT_1: $(PYTHON-SCRIPT-PROVISIONING-DEVICE-CERT-1)
-      PROVISIONING_DEVICE_CERT_2: $(PYTHON-SCRIPT-PROVISIONING-DEVICE-CERT-2)
-      PROVISIONING_DEVICE_CERT_3: $(PYTHON-SCRIPT-PROVISIONING-DEVICE-CERT-3)
-      PROVISIONING_DEVICE_CERT_4: $(PYTHON-SCRIPT-PROVISIONING-DEVICE-CERT-4)
-      PROVISIONING_DEVICE_CERT_5: $(PYTHON-SCRIPT-PROVISIONING-DEVICE-CERT-5)
-
-      PROVISIONING_DEVICE_KEY_1: $(PYTHON-SCRIPT-PROVISIONING-DEVICE-KEY-1)
-      PROVISIONING_DEVICE_KEY_2: $(PYTHON-SCRIPT-PROVISIONING-DEVICE-KEY-2)
-      PROVISIONING_DEVICE_KEY_3: $(PYTHON-SCRIPT-PROVISIONING-DEVICE-KEY-3)
-      PROVISIONING_DEVICE_KEY_4: $(PYTHON-SCRIPT-PROVISIONING-DEVICE-KEY-4)
-      PROVISIONING_DEVICE_KEY_5: $(PYTHON-SCRIPT-PROVISIONING-DEVICE-KEY-5)
-
-      PROVISIONING_DEVICE_COMMON_NAME_1: $(PYTHON-SCRIPT-DEVICE-1-COMMON-NAME)
-      PROVISIONING_DEVICE_COMMON_NAME_2: $(PYTHON-SCRIPT-DEVICE-2-COMMON-NAME)
-      PROVISIONING_DEVICE_COMMON_NAME_3: $(PYTHON-SCRIPT-DEVICE-3-COMMON-NAME)
-      PROVISIONING_DEVICE_COMMON_NAME_4: $(PYTHON-SCRIPT-DEVICE-4-COMMON-NAME)
-      PROVISIONING_DEVICE_COMMON_NAME_5: $(PYTHON-SCRIPT-DEVICE-5-COMMON-NAME)
-      PROVISIONING_DEVICE_PASSWORDS: $(PYTHON-SCRIPT-PROVISIONING-DEVICE-PASSWORDS)
+      PROVISIONING_ROOT_PASSWORD: $(PYTHONPREVIEW-LINUX-PROVISIONING-ROOT-PASSWORD)
+#      PROVISIONING_INTERMEDIATE_CERT: $(PYTHON-SCRIPT-PROVISIONING-INTERMEDIATE-CERT)
+#      PROVISIONING_INTERMEDIATE_CERT_KEY: $(PYTHON-SCRIPT-PROVISIONING-INTERMEDIATE-KEY)
+#
+#      PROVISIONING_DEVICE_CERT_1: $(PYTHON-SCRIPT-PROVISIONING-DEVICE-CERT-1)
+#      PROVISIONING_DEVICE_CERT_2: $(PYTHON-SCRIPT-PROVISIONING-DEVICE-CERT-2)
+#      PROVISIONING_DEVICE_CERT_3: $(PYTHON-SCRIPT-PROVISIONING-DEVICE-CERT-3)
+#      PROVISIONING_DEVICE_CERT_4: $(PYTHON-SCRIPT-PROVISIONING-DEVICE-CERT-4)
+#      PROVISIONING_DEVICE_CERT_5: $(PYTHON-SCRIPT-PROVISIONING-DEVICE-CERT-5)
+#
+#      PROVISIONING_DEVICE_KEY_1: $(PYTHON-SCRIPT-PROVISIONING-DEVICE-KEY-1)
+#      PROVISIONING_DEVICE_KEY_2: $(PYTHON-SCRIPT-PROVISIONING-DEVICE-KEY-2)
+#      PROVISIONING_DEVICE_KEY_3: $(PYTHON-SCRIPT-PROVISIONING-DEVICE-KEY-3)
+#      PROVISIONING_DEVICE_KEY_4: $(PYTHON-SCRIPT-PROVISIONING-DEVICE-KEY-4)
+#      PROVISIONING_DEVICE_KEY_5: $(PYTHON-SCRIPT-PROVISIONING-DEVICE-KEY-5)
+#
+#      PROVISIONING_DEVICE_COMMON_NAME_1: $(PYTHON-SCRIPT-DEVICE-1-COMMON-NAME)
+#      PROVISIONING_DEVICE_COMMON_NAME_2: $(PYTHON-SCRIPT-DEVICE-2-COMMON-NAME)
+#      PROVISIONING_DEVICE_COMMON_NAME_3: $(PYTHON-SCRIPT-DEVICE-3-COMMON-NAME)
+#      PROVISIONING_DEVICE_COMMON_NAME_4: $(PYTHON-SCRIPT-DEVICE-4-COMMON-NAME)
+#      PROVISIONING_DEVICE_COMMON_NAME_5: $(PYTHON-SCRIPT-DEVICE-5-COMMON-NAME)
+#      PROVISIONING_DEVICE_PASSWORDS: $(PYTHON-SCRIPT-PROVISIONING-DEVICE-PASSWORDS)
 #      DPS_CONN_STRING_INVALID_CERT: $(DPS-CONN-STRING-INVALID-CERT)
 #      DPS_GLOBAL_DEVICE_ENDPOINT_INVALID_CERT: $(DPS-GLOBAL-DEVICE-ENDPOINT-INVALID-CERT)
 #      IOTHUB_CONN_STRING_INVALID_CERT: $(IOTHUB-CONN-STRING-INVALID-CERT)
