--- a/vsts/dps-e2e.yaml
+++ b/vsts/dps-e2e.yaml
@@ -59,8 +59,8 @@ jobs:
   - script: |
       cd $(Build.SourcesDirectory)/azure_provisioning_e2e/tests
       cp config/openssl.cnf openssl.cnf
-      openssl req -out geekflare.csr -newkey rsa:2048 -nodes -keyout geekflare.key
-      openssl req -x509 -sha256 -nodes -newkey rsa:2048 -keyout gfselfsigned.key -out gfcert.pem -subj "//CN=geek"
+      openssl req -out geekflare.csr -newkey rsa:2048 -nodes -keyout geekflare.key -subj "//CN=geek"
+      openssl req -x509 -sha256 -nodes -newkey rsa:2048 -keyout gfselfsigned.key -out gfcert.pem
     displayName: 'Direct openssl to check'
 
   - script: |
