--- a/vsts/dps-e2e.yaml
+++ b/vsts/dps-e2e.yaml
@@ -44,41 +44,38 @@ jobs:
   - script: 'echo $(Agent.WorkFolder)'
     displayName: 'What is agent work directory'
 
-#  - script: |
-#      cd $(Build.SourcesDirectory)/azure_provisioning_e2e/tests
-#      mkdir demoCA
-#      cp config/openssl.cnf demoCA/openssl.cnf
-#      mkdir private
-#      mkdir newcerts
-#      touch demoCA/index.txt
-#      echo 1000 > demoCA/serial
-#      openssl genrsa -aes256 -out demoCA/private/intermediate_key.pem -passout pass:leviosa 4096
-#      openssl req -config demoCA/openssl.cnf -key demoCA/private/intermediate_key.pem -passin pass:leviosa -new -sha256 -out demoCA/newcerts/intermediate_csr.pem -subj "/C=US/CN=e2edpswingardium"
-#    displayName: 'Direct openssl to check'
-
-  - script: |
-      cd $(Build.SourcesDirectory)/azure_provisioning_e2e/tests
-      cp config/openssl.cnf openssl.cnf
-      openssl req -out geekflare.csr -newkey rsa:2048 -nodes -keyout geekflare.key -subj "//CN=geek"
-      openssl req -x509 -sha256 -nodes -newkey rsa:2048 -keyout gfselfsigned.key -out gfcert.pem
-    displayName: 'Direct openssl to check'
-
   - script: |
       cd $(Agent.WorkFolder)
       cd ..
       touch .rnd
     displayName: 'create random number generator file due to openssl issues'
 
+  - script: |
+      cd $(Build.SourcesDirectory)/azure_provisioning_e2e/tests
+      mkdir demoCA
+      cp config/openssl.cnf demoCA/openssl.cnf
+      mkdir demoCA/private
+      mkdir demoCA/newcerts
+      touch demoCA/index.txt
+      echo 1000 > demoCA/serial
+      openssl genrsa -aes256 -out demoCA/private/intermediate_key.pem -passout pass:leviosa 4096
+      openssl req -config demoCA/openssl.cnf -key demoCA/private/intermediate_key.pem -passin pass:leviosa -new -sha256 -out demoCA/newcerts/intermediate_csr.pem -subj "/C=US/CN=e2edpswingardium"
+    displayName: 'Direct openssl intermediate creation to check'
+
 #  - script: |
 #      cd $(Build.SourcesDirectory)/azure_provisioning_e2e/tests
-#      pytest test_scenario_simple_sync.py --junitxml=junit/test-results.xml
-#    displayName: 'Run Specified E2E Test with env variables'
+#      cp config/openssl.cnf openssl.cnf
+#      openssl req -out geekflare.csr -newkey rsa:2048 -nodes -keyout geekflare.key -subj "//CN=geek"
+#      openssl req -x509 -sha256 -nodes -newkey rsa:2048 -keyout gfselfsigned.key -out gfcert.pem
+#    displayName: 'Direct openssl to check'
+
+#  - script: |
+#      cd $(Build.SourcesDirectory)/azure_provisioning_e2e/tests
+#      pytest test_scenario_simple_sync.py --junitxml=junit/dps-e2e-test-results.xml
+#    displayName: 'Run Specified E2E Test with env variables by going in for cert creation'
 
 #  - script: 'pytest $(Build.SourcesDirectory)/azure_provisioning_e2e/tests/test_scenario_simple_sync.py --junitxml=junit/test-results.xml'
-#    displayName: 'Run Specified E2E Test with env variables'
-
-#  - script: echo hello world
-#    displayName: 'see if it works'
+#    displayName: 'Run Specified E2E Test with env variables directly'
 
     env:
       IOTHUB_CONNECTION_STRING: $(PYTHONPREVIEW-LINUX-IOTHUB-CONNECTION-STRING)
@@ -94,27 +91,6 @@ jobs:
       PROVISIONING_ROOT_CERT: $(PYTHONPREVIEW-LINUX-IOT-PROVISIONING-ROOT-CERT)
       PROVISIONING_ROOT_CERT_KEY: $(PYTHONPREVIEW-LINUX-IOT-PROVISIONING-ROOT-CERT-KEY)
       PROVISIONING_ROOT_PASSWORD: $(PYTHONPREVIEW-LINUX-PROVISIONING-ROOT-PASSWORD)
-#      PROVISIONING_INTERMEDIATE_CERT: $(PYTHON-SCRIPT-PROVISIONING-INTERMEDIATE-CERT)
-#      PROVISIONING_INTERMEDIATE_CERT_KEY: $(PYTHON-SCRIPT-PROVISIONING-INTERMEDIATE-KEY)
-#
-#      PROVISIONING_DEVICE_CERT_1: $(PYTHON-SCRIPT-PROVISIONING-DEVICE-CERT-1)
-#      PROVISIONING_DEVICE_CERT_2: $(PYTHON-SCRIPT-PROVISIONING-DEVICE-CERT-2)
-#      PROVISIONING_DEVICE_CERT_3: $(PYTHON-SCRIPT-PROVISIONING-DEVICE-CERT-3)
-#      PROVISIONING_DEVICE_CERT_4: $(PYTHON-SCRIPT-PROVISIONING-DEVICE-CERT-4)
-#      PROVISIONING_DEVICE_CERT_5: $(PYTHON-SCRIPT-PROVISIONING-DEVICE-CERT-5)
-#
-#      PROVISIONING_DEVICE_KEY_1: $(PYTHON-SCRIPT-PROVISIONING-DEVICE-KEY-1)
-#      PROVISIONING_DEVICE_KEY_2: $(PYTHON-SCRIPT-PROVISIONING-DEVICE-KEY-2)
-#      PROVISIONING_DEVICE_KEY_3: $(PYTHON-SCRIPT-PROVISIONING-DEVICE-KEY-3)
-#      PROVISIONING_DEVICE_KEY_4: $(PYTHON-SCRIPT-PROVISIONING-DEVICE-KEY-4)
-#      PROVISIONING_DEVICE_KEY_5: $(PYTHON-SCRIPT-PROVISIONING-DEVICE-KEY-5)
-#
-#      PROVISIONING_DEVICE_COMMON_NAME_1: $(PYTHON-SCRIPT-DEVICE-1-COMMON-NAME)
-#      PROVISIONING_DEVICE_COMMON_NAME_2: $(PYTHON-SCRIPT-DEVICE-2-COMMON-NAME)
-#      PROVISIONING_DEVICE_COMMON_NAME_3: $(PYTHON-SCRIPT-DEVICE-3-COMMON-NAME)
-#      PROVISIONING_DEVICE_COMMON_NAME_4: $(PYTHON-SCRIPT-DEVICE-4-COMMON-NAME)
-#      PROVISIONING_DEVICE_COMMON_NAME_5: $(PYTHON-SCRIPT-DEVICE-5-COMMON-NAME)
-#      PROVISIONING_DEVICE_PASSWORDS: $(PYTHON-SCRIPT-PROVISIONING-DEVICE-PASSWORDS)
 #      DPS_CONN_STRING_INVALID_CERT: $(DPS-CONN-STRING-INVALID-CERT)
 #      DPS_GLOBAL_DEVICE_ENDPOINT_INVALID_CERT: $(DPS-GLOBAL-DEVICE-ENDPOINT-INVALID-CERT)
 #      IOTHUB_CONN_STRING_INVALID_CERT: $(IOTHUB-CONN-STRING-INVALID-CERT)
@@ -129,7 +105,7 @@ jobs:
 
   - task: PublishTestResults@2
     displayName: 'Publish Test Results'
-    condition: succeededOrFailed()
+    condition: always()
     inputs:
-      testResultsFiles: '**/test-*.xml'
+      testResultsFiles: '**/dps-e2e-test-*.xml'
       testRunTitle: 'Publish test results for Python $(python.version)'
