--- a/vsts/dps-e2e.yaml
+++ b/vsts/dps-e2e.yaml
@@ -50,22 +50,22 @@ jobs:
       touch .rnd
     displayName: 'create random number generator file due to openssl issues'
 
-  - script: |
-      cd $(Build.SourcesDirectory)/azure_provisioning_e2e/tests
-      mkdir demoCA
-      cp config/openssl.cnf demoCA/openssl.cnf
-      mkdir demoCA/private
-      mkdir demoCA/newcerts
-      touch demoCA/index.txt
-      echo 1000 > demoCA/serial
-      openssl genrsa -aes256 -out demoCA/private/intermediate_key.pem -passout pass:leviosa 4096
-      openssl req -config demoCA/openssl.cnf -key demoCA/private/intermediate_key.pem -passin pass:leviosa -new -sha256 -out demoCA/newcerts/intermediate_csr.pem -subj "/CN=e2edpswingardium"
-    displayName: 'Direct openssl intermediate creation to check'
+#  - script: |
+#      cd $(Build.SourcesDirectory)/azure_provisioning_e2e/tests
+#      mkdir demoCA
+#      cp config/openssl.cnf demoCA/openssl.cnf
+#      mkdir demoCA/private
+#      mkdir demoCA/newcerts
+#      touch demoCA/index.txt
+#      echo 1000 > demoCA/serial
+#      openssl genrsa -aes256 -out demoCA/private/intermediate_key.pem -passout pass:leviosa 4096
+#      openssl req -config demoCA/openssl.cnf -key demoCA/private/intermediate_key.pem -passin pass:leviosa -new -sha256 -out demoCA/newcerts/intermediate_csr.pem -subj "/CN=e2edpswingardium"
+#    displayName: 'Direct openssl intermediate creation to check'
 
-  - script: |
-      cd $(Build.SourcesDirectory)/azure_provisioning_e2e/tests
-      python $(Build.SourcesDirectory)/scripts/check_exists.py
-    displayName: 'check if intermediates were created'
+#  - script: |
+#      cd $(Build.SourcesDirectory)/azure_provisioning_e2e/tests
+#      python $(Build.SourcesDirectory)/scripts/check_exists.py
+#    displayName: 'check if intermediates were created'
 
 #  - script: |
 #      cd $(Build.SourcesDirectory)/azure_provisioning_e2e/tests
@@ -74,10 +74,10 @@ jobs:
 #      openssl req -x509 -sha256 -nodes -newkey rsa:2048 -keyout gfselfsigned.key -out gfcert.pem
 #    displayName: 'Direct openssl to check'
 
-#  - script: |
-#      cd $(Build.SourcesDirectory)/azure_provisioning_e2e/tests
-#      pytest test_scenario_simple_sync.py --junitxml=junit/dps-e2e-test-results.xml
-#    displayName: 'Run Specified E2E Test with env variables by going in for cert creation'
+  - script: |
+      cd $(Build.SourcesDirectory)/azure_provisioning_e2e/tests
+      pytest test_scenario_simple_sync.py --junitxml=junit/dps-e2e-test-results.xml
+    displayName: 'Run Specified E2E Test with env variables by going in for cert creation'
 
 #  - script: 'pytest $(Build.SourcesDirectory)/azure_provisioning_e2e/tests/test_scenario_simple_sync.py --junitxml=junit/test-results.xml'
 #    displayName: 'Run Specified E2E Test with env variables directly'
